<resources>
    <string name="app_name">Shaitzov</string>
    <string name="license_text"><![CDATA[<div>Card suit icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>. The icons are licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY.</a></div>]]></string>
    <string name="godmode">Godmode</string>
    <string name="settings">Settings</string>
    <string name="game_id">Game ID</string>
    <string name="continue_string">Continue</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="nickname">Nickname</string>
    <string name="welcome_to_shaitzov">Welcome to Shaitzov!</string>
    <string name="thanks_what_game" formatted="false">Thanks, %s.\nWhat game do you want to join?</string>
    <string name="err_enter_nickname">Please enter a nickname!</string>
    <string name="err_enter_game_id">Please enter a Game ID!</string>
    <string name="licenses">Licenses</string>
    <string name="new_game">New Game</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="sure_to_exit">Are you sure you want to exit this game?</string>
</resources>
