<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_godmode"
        android:title="@string/godmode"
        app:actionLayout="@layout/toolbar_switch"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:title="@string/settings"-->
        <!--app:showAsAction="never"/>-->

    <item
        android:id="@+id/action_new_game"
        android:title="@string/new_game"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_licenses"
        android:title="@string/licenses"
        app:showAsAction="never"/>
</menu>
